# pg_lab

./: .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  HISTORY.md  README.md  postgres-load-env.sh  postgres-setup.sh  postgres-start.sh  postgres-stop.sh
.github/ISSUE_TEMPLATE/: bug_report.md  request-for-cost-hook.md
docs/: extension_points.md  hinting.md  installation.md
extensions/cout_star/: Makefile  README.md  coutstar.c
extensions/pg_cooldown/: README.md
extensions/pg_lab/: .clangd  .gitignore  CMakeLists.txt  HintBlock.g4  Makefile
extensions/pg_lab/include/: full_plan.h  hintparse_support.h  hints.h  path_gen.h
extensions/pg_lab/src/: debugging.cc  hint_parser.c  hint_parser.cc  hintparse.y  hints.c  hints.cc  hintscan.l  path_gen.cc  pg_lab.c  pg_lab.cc
extensions/pg_temperature/: Makefile  README.md  pg_temperature--0.1.sql  pg_temperature.c  pg_temperature.control
extensions/ues/: Makefile  ues--0.1.sql  ues.c  ues.control
patches/: pg_lab-pg16.patch  update-patch.sh
pg-build/: README.md
pg-patches/: pg_lab-pg16.patch  pg_lab-pg17.patch  update-patch.sh
pg_lab/: CMakeLists.txt  HintBlock.g4
pg_lab/include/: hint_parser.h  hints.h
pg_lab/src/: hint_parser.cc  hints.cc  path_gen.cc  pg_lab.cc
test/: .gitignore  core.py  pyproject.toml  requirements.txt  test-plan-equivalence.py  test-regression.py  test-stats-plan-equivalence.py  test-stats.py
test/stats/data/: badges.csv.zst  import.sql  postLinks.csv.zst  tags.csv.zst  users.csv.zst  votes.csv.zst
test/stats/schema/: schema.sql
tools/: docker-entrypoint.sh  pg_gdb.py
